# harness-learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/harness-engineering/: README.md  anthropic-2024-12-19-building-effective-agents.md  anthropic-2025-09-11-writing-effective-tools-for-agents.md  anthropic-2025-09-29-effective-context-engineering.md  anthropic-2026-03-24-harness-design-long-running-app-dev.md  claude-code-how-claude-code-works.md  langgraph-overview.md  mcp-build-server.md  mcp-what-is-mcp.md  openai-agents-sdk.md  playwright-mcp-readme.md
harness_learning/: __init__.py  __main__.py  builder_agent.py  cli.py  evaluator.py  llm.py  model.py  planner.py  runner.py  tools.py
tests/: test_evaluator.py  test_hello.py  test_tools.py
